@@ -1,3 +1,7 @@
+2016-07-11  Even Rouault <even.rouault@spatialys.com>
+
+    * ogdi/c-api/ecs_dyna.c: fix ecs_OpenDynamicLib on 64 bit Windows (OGDI #72)
+
 2016-07-08  Even Rouault <even.rouault@spatialys.com>
 
     Fix various compilation problems on Windows (contributed by Jerome Siot)
